Extend model for playthroughs (#15)